--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "numpy>=2.3.2",
     "pandas>=2.3.2",
     "pandas-stubs==2.3.2.250827",
+    "pyinstaller>=6.15.0",
     "pyside6>=6.9.2",
 ]
